fix alignment bug

--- a/bubblebbs/static/style.css
+++ b/bubblebbs/static/style.css
@@ -96,6 +96,10 @@ a:hover {
   height: 3rem;
 }
 
+#list-threads th:first-child {
+  padding-left: 10px
+}
+
 #list-threads tbody tr:nth-child(even) {
   background-color: var(--soft-grey);
 }
